@@ -1,3 +1,7 @@
+2012-08-31  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added a feature to remove facetLinkUrlParameters from the reset all facets link - useForFacetResetLinkUrl = 0
+
 2012-08-30  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed bug #40386: PHP 5.4 Compatibility
